--- a/views/footer.ejs
+++ b/views/footer.ejs
@@ -1,11 +1,11 @@
-<footer>
+<footer id="principal">
 	<nav id="navFooter">
 		<ul>
 			<li><a href="">Home</a></li>
-			<li><a href="#rutas">Rutas</a></li>
-			<li><a href="#pintxos">Pintxos</a></li>
-			<li><a href="#bares">Bares</a></li>
-			<li><a href="#calendario">Eventos</a></li>
+			<li><a href="#rutas" class="ancla">Rutas</a></li>
+			<li><a href="#pintxos" class="ancla">Pintxos</a></li>
+			<li><a href="#bares" class="ancla">Bares</a></li>
+			<li><a href="#calendario" class="ancla">Eventos</a></li>
 			<li><a href="/about">About</a></li>
 			<li><a href="/api">API</a></li>
 		</ul>
@@ -13,11 +13,11 @@
 	</nav>
 	
 	<ul id="contacto_footer">
-			<li><a href=""><img src="img/social_footer/googleplus.png"></a></li>
-			<li><a href="https://twitter.com/ThePintxopo"><img src="img/social_footer/twitter.png"></a></li>
-			<li><a href="https://www.facebook.com/profile.php?id=100004284648257"><img src="img/social_footer/facebook.png"></a></li>
-			<li><a href="https://www.pinterest.com/thepintxopo/"><img src="img/social_footer/pinterest.png"></a></li>
-		</ul>
+		<li><a href=""><img src="img/social_footer/googleplus.png"></a></li>
+		<li><a href="https://twitter.com/ThePintxopo"><img src="img/social_footer/twitter.png"></a></li>
+		<li><a href="https://www.facebook.com/profile.php?id=100004284648257"><img src="img/social_footer/facebook.png"></a></li>
+		<li><a href="https://www.pinterest.com/thepintxopo/"><img src="img/social_footer/pinterest.png"></a></li>
+	</ul>
 		
 	<div>© 2015 croquetaOPS, Inc. All rights reserved.</div>
 </footer>
