--- a/views/index.ejs
+++ b/views/index.ejs
@@ -14,6 +14,7 @@
 		<link rel="stylesheet" type="text/css" href="css/main.css">
 		<link rel="stylesheet" type="text/css" href="css/votaciones.css">	
 		<link rel="stylesheet" type="text/css" href="css/footer.css">
+		<link rel="stylesheet" type="text/css" href="css/rutas.css">
 
 		<link href='https://fonts.googleapis.com/css?family=Lora|PT+Sans+Narrow|Old+Standard+TT:400italic,400|Tangerine|Open+Sans+Condensed:300|Courgette' rel='stylesheet' type='text/css'>
 		<link href='https://fonts.googleapis.com/css?family=Open+Sans:400,700' rel='stylesheet' type='text/css'>
@@ -66,6 +67,15 @@
 		
 		
 		<script type="text/javascript" src="js/responsiveMenu.js"></script>
+		
+		<style type="text/css">
+			
+			footer#principal{
+				width: 112%;
+				margin-left: -6%;
+			}
+			
+		</style>
 
 		
 		<!-- <link rel="stylesheet" type="text/css" href="css/component.css" /> -->
@@ -266,7 +276,7 @@
 					<div class="contenidoCalendario">
 						<section class="eventos">
 							<div class="titulito"><h1>Noticias <img src="img/open-iconic/svg/globe.svg"></img></h1></div>
-							<article class="entrada">
+							<article class="entradaArt">
 							  <header>
 							    <h1 class="tituloArticulo">Cata de pintxos en San Martín</h1>
 							    <time class="updated" datetime="2010-08-07 11:11:03-0400" pubdate>11-02-2015</time>
@@ -290,7 +300,7 @@
 							    </p>
 							  </footer>
 							</article>
-							<article class="entrada">
+							<article class="entradaArt">
 							  <header>
 							    <h1 class="tituloArticulo">Presentación libro: "Sushi fácil"</h1>
 							    <time class="updated" datetime="2010-08-07 11:11:03-0400" pubdate>11-02-2015</time>
@@ -331,6 +341,12 @@
 			 	<% include footer %>
 
 				</div><!--Cierre SECCIONES-->
+				
+
+
+
+
+
 				
 				
 
