--- a/public/css/about.css
+++ b/public/css/about.css
@@ -18,7 +18,7 @@ body{
 
 .logo {
 	margin: 0 auto;
-	max-width: 15%;
+	max-width: 30%;
 	z-index: 999;
 	position: relative;
 }
@@ -303,4 +303,13 @@ input[type="range"]::-webkit-slider-thumb{
     border-radius: 50%;
     border: 1px solid rgb(29, 29, 27);
     padding: 2px;
+}
+
+.piefoto{
+    background: none;
+}
+
+footer#principal{
+    width: 100%;
+    margin-left: 0;
 }
