--- a/public/css/main.css
+++ b/public/css/main.css
@@ -201,6 +201,10 @@ body {
 }
 /************************************************/
 
+#rutas {
+	margin-top: 7%;
+}
+
 #pintxos{
 	border:1px solid blue;
 	min-height: 85%;
@@ -209,7 +213,8 @@ body {
 
 
 #bares {
-    background-color: #FFF;
+    /*background-color: #FFF;*/
+    background-image: url('/img/crossword.png');
     width: 100%;
     height: 85%;
 }
@@ -241,10 +246,10 @@ body {
 }
 
 .imgBares {
-	margin-top: 0.5%;
-	width: 55%;
+	margin-top: 1.5%;
+	width: 40%;
 	float: right;
-	height: 80%;
+	margin-right: 10%;
 	height: 85%;
 	display: flex;
 	flex-direction: row;
@@ -255,7 +260,7 @@ body {
 
 .imagenesBares {
 	margin-top: 2%;
-	width: 35%;
+	width: 34%;
 }
 
 .imgBares img {
@@ -272,8 +277,9 @@ body {
 	display: none;
 }
 
+
+/******SECCION EVENTOS********/
 #calendario {
-    border: 1px solid red;
     height: auto;
 }
 
@@ -370,7 +376,7 @@ body {
 	max-width:100%; 
 	max-height:100%;
 }
-.entrada #footNoticia{
+.entradaArt #footNoticia{
 	margin:0 auto;
 	width:100%;
 	padding:2%;
@@ -387,6 +393,7 @@ body {
 	width: 80%;
 		
 }
+/******FIN SECCION EVENTOS********/
 
 .pintxo{
 	margin-top: 3%;
@@ -413,8 +420,8 @@ body {
 
 .pintxo article img {
 	width: 100%;
-	max-height: 250px;
-	min-height:250px;
+	min-width:100%;
+	/*min-height:100%;*/
 }
 
 .pintxo h3 {
@@ -430,27 +437,6 @@ body {
 	color: #797070;
 }
 
-
-
-@media (max-width: 480px){
-	
-	.pintxo article{
-		height: 10%;
-	}
-	
-	.pintxo article p{
-		display: none;
-	}
-
-	.total_votes{
-		display: none;
-	}
-	
-	.media_votes{
-		display: none;
-	}
-	
-}
 
 #usuario{
 	font-size: 95%;
@@ -489,14 +475,16 @@ body {
 #navBares {
 	position: absolute;
 	width: 10%;
-	margin-top: -4%;
-	margin-left: 25%;
+	margin-top: -2.5%;
+	margin-left: 33%;
+	min-width: 60px;
 }
 
 #navBares img {
 	width: 25%;
 	float: right;
 	margin-right: 15%;
+	min-width: 20px;
 }
 
 .secciones{
@@ -515,7 +503,8 @@ body {
 .contenedor{
 	width: 100%;
 	height: 85%;
-	background-color: #FFF;
+	/*background-color: #FFF;*/
+	background-image: url('/img/crossword.png');
 	margin-bottom: 3%;
 	padding: 1%;
 }
@@ -544,15 +533,8 @@ body {
 	padding: 0;
 }
 
-#googleMap {
-	height: 60%;
-    width: 97%;
-    /*min-width: 300px;*/
-    padding: 0;
-    opacity: 1;
-    position: static;
-}
 
+/* Este navrutas creo que no es necesario*/
 .navRutas{
 	width: 30%;
 	height: 95%;
@@ -565,6 +547,7 @@ body {
 
 
 @media screen and (max-width: 600px) { 
+	
 	#visibleLogo{
 		display:none;
 	}
@@ -600,6 +583,161 @@ body {
 
 
 @media (max-width: 480px){
+	
+/*****media seccion PINTXOS****************/
+	
+	.pintxo article{
+		min-width:155px;
+		width:45%;
+		height: 250px;
+		overflow:hidden;
+
+	}
+	.pintxo article img{
+		display:block;
+		width:auto;
+		max-height:100px;
+		position:relative;
+		/*height: 100px;*/
+	}
+	.pintxo article h3{
+		min-height:60px;
+	}
+	.pintxo article p{
+		display: none;
+	}
+	
+	/*********************************/
+	
+	/******SECCION EVENTOS********/
+	
+	.contenidoCalendario{
+		margin-top:2%;
+		width:100%;
+		height:90%;
+		display: flex;
+		flex-direction: row;
+		flex-wrap: wrap;
+		align-items: flex-start; /* align vertical */
+	}
+	
+	.eventos{
+		width:95%;
+	}
+	
+	.agenda{
+		height:90%;
+		width:90%;
+	}
+	
+	.post{
+		width:100%;
+		margin-bottom:1%;
+		display:flex;
+		flex-direction: row;
+		flex-wrap: wrap;
+		justify-content: flex-start;
+		align-items: flex-start; /* align vertical */
+	}
+	.fecha{
+		padding:1%;
+		width:15%;
+		background-color:gray;
+	}
+	.fecha h1, .fecha h2{
+		font-family:helvetica;
+		font-weight:bold;
+		font-size:1em;
+		color:white;
+	}
+	.evento{
+		width:85%;
+	}
+	.evento h1{
+		font-family:helvetica;
+		font-weight:bold;
+		font-size:1em;
+	}
+	.evento h2{
+		font-family:helvetica;
+		font-size:1em;
+	}
+	.titulito{
+		width:100%;
+		text-align: center;
+	}
+	.titulito h1{
+		font-family:helvetica;
+		font-weight:bold;
+		font-size:1em;
+	}
+	.titulito img{
+		width:5%;
+	}
+	
+	.tituloArticulo{
+		font-family: 'Old Standard TT', serif;
+		font-size: 2.5em;
+		color:#181818;
+	}
+	.info{
+		width: 100%;
+		display:flex;
+		flex-direction: row;
+		flex-wrap: wrap;
+		justify-content: flex-start;
+		align-items: flex-start; /* align vertical */
+	}
+	.info p{
+		margin-top:3%;
+		width:95%;
+	}
+	
+	.info figure{
+		width:100%;
+	}
+	
+	.info figure img{
+		max-width:100%; 
+		max-height:100%;
+	}
+	.entradaArt{
+		padding-bottom:4%;
+		margin-bottom:3%;
+		border-bottom:1px solid gray;
+	}
+	.entrada #footNoticia{
+		margin:0 auto;
+		width:100%;
+		padding:2%;
+		background-color:#eee;
+		border:none;
+	}
+	.twitter{
+		height:90%;
+		width:90%;
+	}
+	
+	#twitterstream{
+		margin: 0 auto;
+		width: 100%;
+		/*border: solid 1px black;*/
+		
+	}
+	
+	#twitter-widget-0{
+		
+		width: 100%;
+		
+	}
+	/******FIN SECCION EVENTOS********/
+	
+	#btnUsuario{
+		position: absolute;
+		margin: -11.5% 0 0 1.5%;
+		z-index: 1550;
+	}
+
 	#visibleLogo{
 		display:none;
 	}
@@ -627,9 +765,11 @@ body {
         position: relative;  
     }  
     .entrada {
+    	border:1px solid gray;
+    	padding:1%;
 		width: 100%;
 		height: 100%;
-		margin-top: 50%;
+		margin-top: 20%;
 		/*display: flex;
 		flex-wrap: wrap;
 		align-items: center; *//* align vertical */
@@ -681,12 +821,7 @@ body {
 	  	margin: 0 auto;
 	}
 
-	#twitterstream{
-		
-		border: solid 1px black;
-		width: 50%;
-		
-	}
+	
 
 	.principal {
 		height: 40%;
@@ -694,14 +829,18 @@ body {
 	}
 	
 	.visor {
-		height: 100%;
-		width: 90%;
-		margin-left: 5%;
+		width: 80%;
+		margin-left: 10%;
 	}
 	
 	.visor img {
 		height: 100%;
 		width: 100%;
+	}
+	
+	#navBares {
+		margin-top: 1%;
+		margin-left: 27%;
 	}
 	
 	.imgBares {
@@ -727,154 +866,6 @@ body {
 		width: 58%;
 		float: right;
 	}
-		
-
-}
-
-	/*********** RUTAS **********/
-	
-.contenedor-rutas{
-	width: 100%;
-	height: 85%;
-	display: flex;
-	flex-direction: row;
-	flex-wrap: wrap;
-	justify-content: space-around;
-	align-items: center; /* align vertical */
-}
-
-/* imagen rutas */
-	
-	/* iconos de: http://www.iconsbyhour.co.uk/1pm.html*/
-
-#menu_rutas{
-	
-	text-align: center;
-	display: flex;
-	flex-direction: row; 
-	flex-wrap: wrap;
-	justify-content: space-between;
-	width: 100%;
-	height: 35%;
-}
-
-#menu_rutas a > div > img{
-	
-	
-	width: 70%;
-	/*border: solid 1px red;*/
-	margin-top: 16%;
-}
-
-#menu_rutas > ul > li > a > p:hover{
-	
-	-webkit-transform:scale(1.3, 1.3);
-}
-
-.circulo_btn{
-	
-	width: 50px;
-	height: 50px;
-	/* -webkit-filter: invert(100%); */
-	background-color: #FF9933;
-	/* #ffa659 */
-	border-radius: 50%;
-	margin: auto;
-	
-}
-
-.btnRuta:visited, .btnRuta:focus{
-	
-	text-decoration: none;
-}
-
-.btnRuta:hover{
-	
-	text-decoration: none;
-}
-
-
-.btnRuta:active{
-	
-	text-decoration: none;
-	color: crimson;
-	
-}
-
-#menu_rutas > ul > li > a > p{
-	
-	font-family: "Big Caslon", "Book Antiqua", "Palatino Linotype", Georgia, serif;
-	text-decoration: none;
-	color: #303030;
-	font-size: large;
-}
-
-#menu_rutas ul{
-	
-	list-style: none;
-	width: 100%;
-	height: 100%;
-	
-}
-
-#menu_rutas > ul > li {
-	
-	text-align: center;
-	width: 12%;
-	height: 25%;
-	min-width: 90px;
-	display: inline-block;
-	/*border-radius: 50%;*/
-	height: 100%;
-	
-
-}
-
-#menu_rutas > ul > li > a {
-	margin-left: -10%;
-}
-
-/* Media de RUTAS */
-@media (max-width: 1920px){
-	
-	
-	#menu_rutas{
-		
-		margin-top: 5%;
-	}
-	
-	
-}
-
-@media (max-width: 480px){
-	
-	#menu_rutas{
-		
-		height: 40%;
-	}
-		
-	#menu_rutas > ul > li > a > p{
-		
-		font-size: small;
-	}
-
-	
-	#menu_rutas > ul{
-		
-		height: 50%;
-	}
-	
-	#menu_rutas > ul > li > a {
-		margin-left: -7%;
-	}
-	
-	#menu_rutas > ul > li {
-		margin-top: 0%;
-	}
-	
-	#cerveza{
-		display: none;
-	}
 	
 	#titulo1 {
 		display: none;
@@ -882,45 +873,11 @@ body {
 	
 	#titulo2 {
 		display: block;
-	}
-	
-}
-
-@media (max-width: 320) and (min-width: 480){
-	
-	#googleMap {
-		
-		height: 50%;
-	    width: 90%;
-	}
-		
-	.circulo_btn {
-		
-		width: 30px;
-		height: 30px;
-		margin: 5%;
-		
-	}
-	
-	#menu_rutas > ul > li > a > div {
-		
-		margin: 5%;
-		
-	}
-	
-	
-	#menu_rutas > ul > li {
-		margin-top: -3%;
-	}
-	
-	li#cerveza{
-		display: none;
-	}
-
+	}	
 
 }
 
-/* Fin RUTAS */
+
 
 /* http://css-tricks.com/snippets/css/a-guide-to-flexbox/ */
 	
