--- a/views/profile.ejs
+++ b/views/profile.ejs
@@ -3,7 +3,12 @@
 <html>
 <head>
 <title>The Pintxopo</title>
+	
 	<meta charset="utf-8"/>
+	
+	<!--Este meta se requiere para poder escalar nuestra página a diferentes tipos de resolución--> 
+	<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
+		
 	<!-- Bootstrap CSS -->
 	<link rel="stylesheet" href="css/bootstrap.css"/>
 
@@ -11,7 +16,6 @@
 	<link rel="stylesheet" href="css/bootstrapValidator.min.css"/>
 		
 	<!-- CSS -->
-	<link rel="stylesheet" type="text/css" href="css/footer.css" ><!--Estilo footer-->
 	<link rel="stylesheet" type="text/css" href="css/profile.css" ><!--Estilos principales-->
       
 	<!-- Fuentes externas -->
@@ -189,6 +193,5 @@
 	</div>
 	
 </div>
-<% include footer %>
 </body>
 </html>
