--- a/public/css/main.css
+++ b/public/css/main.css
@@ -765,7 +765,7 @@ body {
         position: relative;  
     }  
     .entrada {
-    	border:1px solid gray;
+    	/*border:1px solid gray;*/
     	padding:1%;
 		width: 100%;
 		height: 100%;
