--- a/views/about.ejs
+++ b/views/about.ejs
@@ -5,6 +5,9 @@
 	<title>The Pintxopo</title>
 	<meta charset="utf-8"/>
 	
+	<!--Este meta se requiere para poder escalar nuestra página a diferentes tipos de resolución--> 
+	<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
+	
 	<!-- Bootstrap CSS -->
 	<link rel="stylesheet" href="css/bootstrap.css"/>
 	<link rel="stylesheet" href="css/footer.css"/>
@@ -101,6 +104,7 @@
 		    </article>
 		</section>
 		
+		<div class="titulito"><h1>Nuestra inspiración <img src="img/open-iconic/svg/monitor.svg"></img></h1></div>
 			<div class="video">
 		<div class="video_player_box">
 			<video id="my_video" width="600" height="320">
