--- a/views/footer.ejs
+++ b/views/footer.ejs
@@ -2,10 +2,10 @@
 	<nav id="navFooter">
 		<ul>
 			<li><a href="">Home</a></li>
-			<li><a href="#rutas" class="ancla">Rutas</a></li>
-			<li><a href="#pintxos" class="ancla">Pintxos</a></li>
-			<li><a href="#bares" class="ancla">Bares</a></li>
-			<li><a href="#calendario" class="ancla">Eventos</a></li>
+			<li><a href="/#rutas" class="ancla">Rutas</a></li>
+			<li><a href="/#pintxos" class="ancla">Pintxos</a></li>
+			<li><a href="/#bares" class="ancla">Bares</a></li>
+			<li><a href="/#calendario" class="ancla">Eventos</a></li>
 			<li><a href="/about">About</a></li>
 			<li><a href="/api">API</a></li>
 		</ul>
