--- a/public/css/footer.css
+++ b/public/css/footer.css
@@ -32,7 +32,7 @@ footer#principal{
 
 #navFooter > ul > li {
 	
-	width: 8%;
+	width: 6%;
 	display: inline-block;
 	text-align: center;
 	color: black;
@@ -61,6 +61,7 @@ footer#principal div{
     width: 100%;
     text-align: center;
     color: rgb(113, 114, 115);
+    margin-bottom: 1%;
     
 }
 
@@ -73,19 +74,14 @@ footer#principal div{
 
 #contacto_footer img{
 	
-	margin-right: 0.5%;
 	-webkit-filter: invert(100%);
-	width: 20%;
+	width: 25%;
 	
-}
-
-#contacto_footer img, #contacto_footer p{
-   display: inline;
 }
 
 #contacto_footer > li{
     
-    width: 10%;
+    width: 4%;
 	display: inline-block;
 	text-align: center;
 	color: black;
