--- a/public/css/profile.css
+++ b/public/css/profile.css
@@ -20,12 +20,17 @@ body{
 	width: 100%;
 	height: 125px;
 	margin-bottom: 10%;
+
+}
+
+#avatarImg{
+	border-radius: 50%;
 }
 
 #nom-usuario{
     width: 100%;
     margin-top: 5%;
-    height: 75px;
+    height: 50px;
 }
 
 #nom-usuario h1 {
@@ -123,7 +128,7 @@ hr{
 }
 
 .btnEditar img{
-	width: 24px;
+	width: 40px;
 	height: auto;
 }
 #editar a{
@@ -133,7 +138,7 @@ hr{
 }
 #editar{
 	margin: 0 auto;
-	width: 8%;
+	width: 100%;
 	text-align: center;
 }
 #editar img{
@@ -165,7 +170,7 @@ hr{
 /* Para que el botón no se vea y solo se vea la imagen*/
 #falseinput{
 	background: transparent;
-    border: none !important;
+    border: none;
 }
 
 /* Escondemos el botón de Examinar para poder poner el botón por encima y customizarlo*/
@@ -202,7 +207,7 @@ footer#principal{
 	.logo {
 		width: 40%;
 		display: block;
-		margin: 0;
+		margin-top: 5%;
 		margin-left: 30%;
 	}
 	
@@ -218,7 +223,6 @@ footer#principal{
 
 	#nom-usuario{
 	    width: 100%;
-		margin: 0;	    
 	}
 	
 	#nom-usuario h1 {
@@ -227,21 +231,25 @@ footer#principal{
 		color: black;
 		text-align: center;
 	}
-	
 	#avatar{
-		width: 70%;
-		margin: 0;
-		margin-top: -5%;
-		margin-left: 32%;
-
+		width: 60%;
+		margin: 0 auto;
+		display: flex;
+		flex-direction: row;
+		flex-wrap: wrap;
+		justify-content: space-around;
+		align-items: center; /* align vertical */
 	}
 	
 	#falseinput {
-		width: 30%;
+		padding:3%;
+		text-align:center;
+		width:100%;
 	}
 	
 	#btnEditarAvatar {
-		width: 40%;
+		width: 10%;
+		margin-left:45%;
 	}
 	
 	#datos-usuario {
@@ -249,7 +257,7 @@ footer#principal{
 		height: 20%;
 		margin: 0;
 		margin-left: 20%;
-		margin-top: 10%;
+		margin-top: 15%;
 	}
 	
 	#datos p{
@@ -259,8 +267,8 @@ footer#principal{
 	}
 	
 	#editar{
-		margin-top: -5%;
 		width: 50%;
+		margin-bottom:5%;
 	}
 	
 	.valoracion h1{
@@ -275,6 +283,11 @@ footer#principal{
 	
 	.valoracion p {
 		font-size: 15px;
+	}
+	
+	.btnEditar img{
+		width: 24px;
+		height: auto;
 	}
 	
 }
