--- a/views/profile.ejs
+++ b/views/profile.ejs
@@ -36,6 +36,8 @@
 	<!--<script src="js/editarUsuario.js" type="text/javascript"></script>-->
 
 	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.1/js/bootstrap.min.js"></script>
+	
+	<script type="text/javascript" src="js/mostrarPintxos.js"></script>
 
 </head>
 <body>
@@ -102,7 +104,7 @@
 					
 					<% for(var i = 0; i < user.local.pintxosVotados.length; i++) {%>
 					
-						<p><%= user.local.pintxosVotados[i] %></p>
+						<p class="idPintxo"><%= user.local.pintxosVotados[i] %></p>
 						
 					<% } %>
 					
