--- a/views/footer.ejs
+++ b/views/footer.ejs
@@ -1,7 +1,7 @@
 <footer id="principal">
 	<nav id="navFooter">
 		<ul>
-			<li><a href="">Home</a></li>
+			<li><a href="/">Home</a></li>
 			<li><a href="/#rutas" class="ancla">Rutas</a></li>
 			<li><a href="/#pintxos" class="ancla">Pintxos</a></li>
 			<li><a href="/#bares" class="ancla">Bares</a></li>
