--- a/public/css/main.css
+++ b/public/css/main.css
@@ -24,7 +24,8 @@ body {
 	height: auto;
 	top: 0;
 	box-shadow: 0 0 6px 0px rgba(50, 50, 50, 0.75);
-	background-image: url('/img/crossword.png');
+	background-color: #FFF;
+	/*background-image: url('/img/crossword.png');*/
 	z-index: 1001;
 
 }
@@ -42,7 +43,8 @@ body {
 	font-family: 'Open Sans', sans-serif;
 	font-weight: 700;
 	position: fixed;
-	background-image: url('/img/crossword.png');
+	/*background-image: url('/img/crossword.png');*/
+	background-color: #FFF;
 	box-shadow: 0 0 6px 0px rgba(50, 50, 50, 0.75);
 }
 
@@ -230,8 +232,8 @@ body {
 
 
 #bares {
-    /*background-color: #FFF;*/
-    background-image: url('/img/crossword.png');
+    background-color: #FFF;
+    /*background-image: url('/img/crossword.png');*/
     width: 100%;
     height: 85%;
 }
@@ -262,7 +264,7 @@ body {
 	height:auto;
 }
 .visor {
-	width:37%;
+	width:36%;
 }
 
 .visor img {
@@ -295,7 +297,7 @@ body {
 .nombreBar{
 	width:100%;
 }
-.nombreBar h1{
+.nombreBar h1, #nombreBar2{
 	padding:0;
 	margin-top:0;
 	font-size: 100%;
@@ -551,8 +553,8 @@ body {
 .contenedor{
 	width: 100%;
 	height: 85%;
-	/*background-color: #FFF;*/
-	background-image: url('/img/crossword.png');
+	background-color: #FFF;
+	/*background-image: url('/img/crossword.png');*/
 	margin-bottom: 3%;
 	padding: 1%;
 }
@@ -982,6 +984,13 @@ body {
 	
 @media (max-width: 1370px){
 
+	#rutas{
+		height:750px;
+	}
+	
+	#bares{
+		height:700px;
+	}
 
 	.bienvenida {
 		width: 60%;
